correct issue on mobile

--- a/template/common.css
+++ b/template/common.css
@@ -18,7 +18,7 @@ code {
 
 	font-family: "Monaspace Xenon", sans-serif;
 	opacity: 0.8;
-	flex-flow: wrap;
+	flex-flow: nowrap;
 	display: flex;
 	text-indent: 10pt;
 }
